unpackaged/main/default/objects/User/fields/Amazon_Connect_Username__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Connect_Username__c</fullName>
    <description>Concatenates Fields used to generate amazon connect username</description>
    <formula>Alias &amp; '@' &amp; Id &amp; '@' &amp; $Organization.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matching Username as provisioned through the AWS API for Amazon Connect</inlineHelpText>
    <label>Amazon Connect Username</label>
    <type>Text</type>
</CustomField>