unpackaged/main/default/objects/User/fields/Asana_SPOC_GID__c.field-meta.xml
<CustomField>
    <fullName>Asana_SPOC_GID__c</fullName>
    <externalId>true</externalId>
    <label>Asana SPOC GID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>