unpackaged/main/default/objects/User/fields/Backup_VCC_Role__c.field-meta.xml
<CustomField>
    <fullName>Backup_VCC_Role__c</fullName>
    <label>Backup VCC Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>SAE</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>CSAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>