unpackaged/main/default/objects/User/fields/Bookings_Parity__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Parity__c</fullName>
    <label>Bookings Parity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>