unpackaged/main/default/objects/User/fields/CPCSurveyor__c.field-meta.xml
<CustomField>
    <fullName>CPCSurveyor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible to be part of CPC survey</description>
    <label>CPC Surveyor</label>
    <type>Checkbox</type>
</CustomField>