unpackaged/main/default/objects/User/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF(ISBLANK(FirstName ), "", FirstName &amp; " ") &amp;

IF(ISBLANK(MiddleName), "", MiddleName &amp; " ") &amp;

LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>