unpackaged/main/default/objects/User/fields/Generic_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Generic_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that says a user can become owner of BDR Generic Accounts via Round Robin</description>
    <inlineHelpText>Check this box if you want a user to be able to receive Generic BDR round robin Accounts.</inlineHelpText>
    <label>Generic_BDR_RR_FLAG</label>
    <type>Checkbox</type>
</CustomField>