unpackaged/main/default/objects/User/fields/GNOSurveyor__c.field-meta.xml
<CustomField>
    <fullName>GNOSurveyor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Xometry User is a GNO team member who is associated with GNO Survey.</description>
    <inlineHelpText>Xometry User is a GNO team member who is associated with GNO Survey.</inlineHelpText>
    <label>GNO Surveyor</label>
    <type>Checkbox</type>
</CustomField>