unpackaged/main/default/objects/User/fields/Injection_Molding_Certified__c.field-meta.xml
<CustomField>
    <fullName>Injection_Molding_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injection Molding Certified</label>
    <type>Checkbox</type>
</CustomField>