unpackaged/main/default/objects/User/fields/IsFrozen__c.field-meta.xml
<CustomField>
    <fullName>IsFrozen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Schedule Flow to update this field by SOQL query on a daily basis</description>
    <inlineHelpText>Schedule Flow Update Fields</inlineHelpText>
    <label>IsFrozen</label>
    <type>Checkbox</type>
</CustomField>