unpackaged/main/default/objects/User/fields/IsGNOSupplyMaterialOppOwner__c.field-meta.xml
<CustomField>
    <fullName>IsGNOSupplyMaterialOppOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for lookup Filter from Opp to User.</description>
    <label>GNO Supply Material Opp Owner</label>
    <type>Checkbox</type>
</CustomField>