unpackaged/main/default/objects/User/fields/Manager_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_Safe_ID__c</fullName>
    <formula>CaseSafeId(ManagerId)</formula>
    <label>Manager (Safe ID)</label>
    <type>Text</type>
</CustomField>