unpackaged/main/default/objects/User/fields/Manager_Text__c.field-meta.xml
<CustomField>
    <fullName>Manager_Text__c</fullName>
    <description>Used for reporting on User Manager without creating a new custom report type on User.
The Manager field is not natively able to be reported on</description>
    <formula>Manager.FirstName + " " + Manager.LastName</formula>
    <label>Manager Text</label>
    <type>Text</type>
</CustomField>