unpackaged/main/default/objects/User/fields/NonGeneric_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>NonGeneric_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that says a user can become owner of BDR NonGeneric Accounts via Round Robin</description>
    <inlineHelpText>Check this box if you want a user to be able to receive round robin Accounts.</inlineHelpText>
    <label>NonGeneric_BDR_RR_FLAG</label>
    <type>Checkbox</type>
</CustomField>