unpackaged/main/default/objects/User/fields/Old_Direct_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Direct_Number__c</fullName>
    <label>Old Direct Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>