unpackaged/main/default/objects/User/fields/P21SalesRepID__c.field-meta.xml
<CustomField>
    <fullName>P21SalesRepID__c</fullName>
    <description>Marketplace Sales Rep has a P21 Rep ID.</description>
    <externalId>true</externalId>
    <label>P21 Sales Rep ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>