unpackaged/main/default/objects/User/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <description>Profile Name</description>
    <formula>Profile.Name</formula>
    <inlineHelpText>Profile Name</inlineHelpText>
    <label>ProfileName</label>
    <type>Text</type>
</CustomField>