unpackaged/main/default/objects/User/fields/Rep_Link__c.field-meta.xml
<CustomField>
    <fullName>Rep_Link__c</fullName>
    <description>For Sales Users, set this to the following, updating First Initial and Last Name tags manually: https://www.xometry.com/quoting/home?utm_source=replinks&amp;utm_medium=other_campaigns&amp;utm_campaign=&lt;FirstInitial&gt;&lt;LastName&gt;</description>
    <label>Rep Link</label>
    <type>Url</type>
</CustomField>