unpackaged/main/default/objects/User/fields/Safe_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_User_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe User ID</label>
    <type>Text</type>
</CustomField>