unpackaged/main/default/objects/User/fields/SlackUserID__c.field-meta.xml
<CustomField>
    <fullName>SlackUserID__c</fullName>
    <description>Slack User ID</description>
    <externalId>true</externalId>
    <label>Slack User ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>