unpackaged/main/default/objects/User/fields/SPOC_Owner__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPOC Owner?</label>
    <type>Checkbox</type>
</CustomField>