unpackaged/main/default/objects/User/fields/Supplies_RR_Flag__c.field-meta.xml
<CustomField>
    <fullName>Supplies_RR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if a User can receive a Supplies</description>
    <label>Supplies RR Flag</label>
    <type>Checkbox</type>
</CustomField>