unpackaged/main/default/objects/User/fields/Supplies_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplies Sales Rep</label>
    <type>Checkbox</type>
</CustomField>