unpackaged/main/default/objects/User/fields/User_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Owner_Type__c</fullName>
    <label>User Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>