unpackaged/main/default/objects/User/fields/User_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Name__c</fullName>
    <formula>UserRole.Name</formula>
    <inlineHelpText>This field is used for VCC Routing purposes</inlineHelpText>
    <label>User Role Name</label>
    <type>Text</type>
</CustomField>