unpackaged/main/default/objects/User/fields/Vonage_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Phone_Number__c</fullName>
    <inlineHelpText>Keep locked down; keep updated. Used by VCC.</inlineHelpText>
    <label>Vonage Phone Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>