unpackaged/main/default/objects/User/fields/W9_Access__c.field-meta.xml
<CustomField>
    <fullName>W9_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the restriction rule will allow users to see S3-Files that are categorized as W-9.</description>
    <label>W9 Access</label>
    <type>Checkbox</type>
</CustomField>