unpackaged/main/default/objects/User/fields/Working_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Working_Time_Zone__c</fullName>
    <inlineHelpText>The time zone in which this User's working hours are based.</inlineHelpText>
    <label>Working Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>