unpackaged/main/default/objects/User/fields/Zendesk_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Created During PSE Service Migration Project</description>
    <inlineHelpText>Populated with the Zendesk tag/API name for the Salesforce Assignee field. Allows a Zendesk user to select a Salesforce user to assign a new case to via the integration.</inlineHelpText>
    <label>Zendesk ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>