unpackaged/main/default/objects/User/listViews/Active_Non_Sales_Users.listView-meta.xml
<ListView>
    <fullName>Active_Non_Sales_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>Sales Leadership,AE,AR,BDR,CSAM,EBDR,IMS,SAE,SAM,SDR</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>Executive Leadership,Sales Administrator</value>
    </filters>
    <label>Active Non-Sales Users</label>
</ListView>