unpackaged/main/default/objects/User/listViews/Active_Sales_Reps.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Reps</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Zendesk_ID__c</columns>
    <columns>User_Owner_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>AE,AR,BDR,CSAM,EBDR,IMS,SAE,SAM,SDR,NCR,VMS,TSE,Sales Administrator,AE-I,AE-II</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>AE-III,CSS</value>
    </filters>
    <label>Active Sales Reps</label>
</ListView>