unpackaged/main/default/objects/User/listViews/Active_Users_NH.listView-meta.xml
<ListView>
    <fullName>Active_Users_NH</fullName>
    <columns>FULL_NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>User_Role_Name__c</columns>
    <columns>User_Owner_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users - NH</label>
</ListView>