unpackaged/main/default/objects/User/listViews/Active_Users_with_Role_and_Backup.listView-meta.xml
<ListView>
    <fullName>Active_Users_with_Role_and_Backup</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Backup_VCC_Role__c</columns>
    <columns>User_Role_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Role_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NVMContactWorld__NVM_Agent_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>stawson,meehan</value>
    </filters>
    <label>Active Users with Role and Backup</label>
</ListView>