unpackaged/main/default/objects/User/listViews/Data_Audit.listView-meta.xml
<ListView>
    <fullName>Data_Audit</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Office_Location__c</columns>
    <columns>MANAGER</columns>
    <columns>User_Owner_Type__c</columns>
    <columns>TIMEZONE</columns>
    <columns>CORE.USERS.STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Sales Leadership,AE,AR,BDR,CSAM,EBDR,IMS,SAE,SAM,SDR</value>
    </filters>
    <label>Data Audit</label>
</ListView>