unpackaged/main/default/objects/User/listViews/EU_Users.listView-meta.xml
<ListView>
    <fullName>EU_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Xometry EU</value>
    </filters>
    <label>EU Users</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>