unpackaged/main/default/objects/User/listViews/Frozen_Inactive_Users_TMM.listView-meta.xml
<ListView>
    <fullName>Frozen_Inactive_Users_TMM</fullName>
    <columns>FULL_NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
    </filters>
    <label>Frozen Inactive Users TMM</label>
</ListView>